a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_rapoport/invalidtype1.min
# Can't add ints and string

var x : int ;
var y : string;

print x*x+y;
